# A-Stream

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: auth-jni.c  ffmpeg-jni.c
app/src/main/jni/: Android.mk
app/src/main/res/drawable/: background_broadcast_status.xml  background_statistic.xml  background_status_live.xml  broadcast_adapter_status_background.xml  horizontal_item_decoration.xml  ic_error_dark.xml  ic_https_dark.xml  ic_link_dark.xml  ic_messenger_dark.xml  ic_public_dark.xml  ic_status_broadcast_live.xml  ic_thumb_down_dark.xml  ic_thumb_up_dark.xml  ic_visibility_dark.xml  logo_dark.xml  logo_light.xml  newbroadcast_option_background.xml
app/src/main/res/layout/: adapted_broadcast_loader.xml  adapter_broadcast.xml  adapter_chatmessage.xml  auth_activity.xml  broadcast_activity.xml  broadcast_activity_info.xml  broadcast_activity_interractable.xml  broadcast_activity_v21.xml  broadcast_create_dialog.xml  error_activity.xml  loading_activity.xml  main_activity.xml  main_activity_app_bar.xml  main_activity_broadcast_list_fragment.xml  main_activity_content_main.xml  nav_header_main.xml  newbroadcast_activity.xml  newbroadcast_activity_options_list.xml  newbroadcast_option_layout.xml
app/src/main/res/menu/: main_drawer.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/xml/: preferences.xml
(+80 files in other folders)
